test/zora/fixtures/plan_not_enough_fail_out.txt
TAP version 13
# Execute fewer tests than planned
ok 1 should be truthy
ok 2 should be truthy
$TAPE/index.js:$LINE
  function rethrow () { throw err }
                        ^

Error: Test ended before the planned number
          planned: 3
          actual: 2
          
    at Test.run ($TAPE/index.js:$LINE:$COL)
    at TestRunner.run ($TAPE/index.js:$LINE:$COL)
    at Timeout._onTimeout ($TAPE/index.js:$LINE:$COL)
    at listOnTimeout (node:internal/timers:$LINE:$COL)
    at process.processTimers (node:internal/timers:$LINE:$COL)
